@@ -45,8 +45,8 @@ RPM packages:
 Obsolete packages:
 <ul>
 <li>
-Older 2.x versions: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/">here</a>
-(<b>Note!</b> Versions prior to 2.2.0 are no longer supported.)</li>
+Older 2.x.x versions: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/">here</a>
+(<b>Note!</b> Versions prior to 2.4.0 are no longer supported.)</li>
 
 <li>
 Last 1.xx Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-1/fvwm-1.24r.tar.gz">1.24r</a>
@@ -81,7 +81,7 @@ Questions about the stable releases should be asked on our <a href="mailinglist.
 List</a>.
 <p>*** If you use anything else but the latest stable release we will make
 no promises that anything works. ***
-<p><i>Older 2.x and 1.x versions:</i>
+<p><i>Older 2.x.x and 1.x versions:</i>
 <p>Don't use them. If you encounter a problem we will most likely ask you
 to upgrade.  There is a constant stream of bug fixes and we cannot spend
 our time fixing the same bugs again and again.
