@@ -9,30 +9,49 @@
 <h1><font color="pink">The Official FVWM Homepage - Features</font></h1>
 </center>
 
-Partial list of features common to 1.xx and 2.xx:
+<hr>
 
-    <ul>
-      <li>Multiple Disjoint Large Virtual Desktops
-      <li>Smaller memory usage (more so in 1.xx)
-      <li>Dynamically extensable via modules
-      <li>Recognizes Motif MWM hints
-      <li>Keyboard or Mouse operation
-      <li>Attempts to be ICCCM 2 compliant
-      <li>3-D look to window frames
-      <li>Full color shaped icons
-      <li>M4 preprocesing of the config file
-      <li>Auto-raising of windows
-      <li>Multi-screen support
-      <li>Cursor (Mouse Pointer) control on a context basis
-      <li>Viewport scrolling by moving the mouse off the edge of the screen
-      <li>Different window decorations for window that have or don't have focus
-      <li>Multiple ways to control icon placement
-      <li>Multiple ways to control initial window placement
-    </ul>
+Partial list of features new to 2.5.x:
 
-<p>
+<ul>
+  <li>Full Enhanced Window Manager Hints support
+  <li>Full internationalization
+  <li>Greately improved font support, including anti-aliasing
+  <li>Improved decoration code (no flickering anymore)
+  <li>Featuring side titles, including vertical text
+  <li>Powerful WindowShade in all directions, including diagonal
+  <li>Supporting PNG including alpha blending
+  <li>Image rendering in colorsets
+  <li>Perl library for creating modules in Perl
+  <li>New module FvwmPerl to enable scripting in rc files
+  <li>Optional text shadows (looks nice with light text)
+</ul>
 
-Partial list of features new to 2.xx:
+<hr>
+
+Partial list of features new to 2.4.x:
+
+<ul>
+  <li>New dynamical colorset method for defining colors
+  <li>New module FvwmGtk to build GTK+ dialogs and menus
+  <li>Rewritten and extended functionality of FvwmButtons
+  <li>Several new and several removed modules
+  <li>Mouse strokes, draw lines to execute commands
+  <li>Ability to dynamically create menus
+  <li>Several fvwm-menu-* utiliies for creating dynamical menus
+  <li>Expanding useful window and desktop specific variables
+  <li>Featuring busy cursor in several places
+  <li>Full support for ICCCM2
+  <li>GNOME Window Manager hints support
+  <li>Session management support
+  <li>Initial internationalization support
+  <li>Xinerama extention support
+  <li>Searching files in its own user directory ~/.fvwm/
+</ul>
+
+<hr>
+
+Partial list of features new to 2.2.x:
 
     <ul>
       <li>New more powerful and sensible rc file format
@@ -54,6 +73,31 @@ Partial list of features new to 2.xx:
       <li>Roll-up type window shading
       <li>Some ability to centrally configure fvwm
     </ul>
+
+<hr>
+
+Partial list of features common to 1.xx and 2.x.x:
+
+    <ul>
+      <li>Multiple Disjoint Large Virtual Desktops
+      <li>Smaller memory usage (more so in 1.xx)
+      <li>Dynamically extensable via modules
+      <li>Recognizes Motif MWM hints
+      <li>Keyboard or Mouse operation
+      <li>Attempts to be ICCCM 2 compliant
+      <li>3-D look to window frames
+      <li>Full color shaped icons
+      <li>M4 preprocesing of the config file
+      <li>Auto-raising of windows
+      <li>Multi-screen support
+      <li>Cursor (Mouse Pointer) control on a context basis
+      <li>Viewport scrolling by moving the mouse off the edge of the screen
+      <li>Different window decorations for window that have or don't have focus
+      <li>Multiple ways to control icon placement
+      <li>Multiple ways to control initial window placement
+    </ul>
+
+<p>
 
 <hr>
 
