@@ -15,11 +15,6 @@
 FVWM is an extremely powerful ICCCM-compliant multiple virtual desktop window
 manager for the X&nbsp;Window system.
 
-<!-- current status added by migo -->
-<p>
-<b>Status</b>: It seems like <a href="http://www.hpc.uh.edu/">hpc.uh.edu</a>
-is down, so no email for now.
-
 <!--
 <p><font size="+1" color="yellow">NEWS FLASH!</font>
 FVWM 2.5.1, an alpha
